welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

If (getCouleurSol() == color.green) {avance()}



}        
